{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 495,
  "lineage": "bc4f0809-a5be-d4a6-c9c6-2ea7d44878e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "first7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-subnet-a",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:831926592389:instance/i-0ac8e5bd82ee8d2e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac8e5bd82ee8d2e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0617c5583ff2d14d1"
              }
            ],
            "primary_network_interface_id": "eni-0617c5583ff2d14d1",
            "private_dns": "ip-10-190-0-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.190.0.33",
            "public_dns": "ec2-3-87-36-171.compute-1.amazonaws.com",
            "public_ip": "3.87.36.171",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c5cd3bfba4e411ef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025ea042c30198944",
            "tags": {
              "Environment": "Test",
              "Name": "dev-subnet-a-instance",
              "Owner": "Jaune"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "dev-subnet-a-instance",
              "Owner": "Jaune"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce6e93509378c0da"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831926592389",
            "id": "i-0ac8e5bd82ee8d2e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "aws_subnet.public_subnet",
            "aws_vpc.main_1",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.public_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926592389:internet-gateway/igw-036f8602cb3d0b03a",
            "id": "igw-036f8602cb3d0b03a",
            "owner_id": "831926592389",
            "region": "us-east-1",
            "tags": {
              "Environment": "Test",
              "Name": "c7_2_brazil",
              "Owner": "Jaune"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "c7_2_brazil",
              "Owner": "Jaune"
            },
            "vpc_id": "vpc-0dbfaf953b81aed42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926592389:route-table/rtb-075f1dc302339d647",
            "id": "rtb-075f1dc302339d647",
            "owner_id": "831926592389",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036f8602cb3d0b03a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "c7_2_brazil public-route-table"
            },
            "tags_all": {
              "Name": "c7_2_brazil public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbfaf953b81aed42"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831926592389",
            "id": "rtb-075f1dc302339d647",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca04e1694d21bd4d",
            "region": "us-east-1",
            "route_table_id": "rtb-075f1dc302339d647",
            "subnet_id": "subnet-025ea042c30198944"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main_1",
            "data.aws_availability_zones.public_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926592389:security-group/sg-0ce6e93509378c0da",
            "description": "Allow http \u0026 ssh inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0ce6e93509378c0da",
            "ingress": [],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "831926592389",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh"
            },
            "tags_all": {
              "Name": "allow_http_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbfaf953b81aed42"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831926592389",
            "id": "sg-0ce6e93509378c0da",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926592389:subnet/subnet-025ea042c30198944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.190.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025ea042c30198944",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831926592389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "Test",
              "Name": "dev-subnet-a",
              "Owner": "Jaune"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "dev-subnet-a",
              "Owner": "Jaune"
            },
            "vpc_id": "vpc-0dbfaf953b81aed42"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831926592389",
            "id": "subnet-025ea042c30198944",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_1",
            "data.aws_availability_zones.public_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926592389:vpc/vpc-0dbfaf953b81aed42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.190.0.0/16",
            "default_network_acl_id": "acl-00e13b83166ee531a",
            "default_route_table_id": "rtb-04ea7ee453c361bec",
            "default_security_group_id": "sg-06a80a343082403ef",
            "dhcp_options_id": "dopt-0c511ebc75fc87aad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dbfaf953b81aed42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ea7ee453c361bec",
            "owner_id": "831926592389",
            "region": "us-east-1",
            "tags": {
              "Environment": "Test",
              "Name": "c7_2_brazil",
              "Owner": "Jaune"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "c7_2_brazil",
              "Owner": "Jaune"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926592389:security-group-rule/sgr-0865a63d706dd35e1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0865a63d706dd35e1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ce6e93509378c0da",
            "security_group_rule_id": "sgr-0865a63d706dd35e1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831926592389",
            "id": "sgr-0865a63d706dd35e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "aws_vpc.main_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926592389:security-group-rule/sgr-0674d57cab400f518",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0674d57cab400f518",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ce6e93509378c0da",
            "security_group_rule_id": "sgr-0674d57cab400f518",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831926592389",
            "id": "sgr-0674d57cab400f518",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "aws_vpc.main_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926592389:security-group-rule/sgr-0b13c6998ceecf7bd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b13c6998ceecf7bd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ce6e93509378c0da",
            "security_group_rule_id": "sgr-0b13c6998ceecf7bd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831926592389",
            "id": "sgr-0b13c6998ceecf7bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "aws_vpc.main_1"
          ]
        }
      ]
    }
  ]
}